Updated health check endpoints and added a second at /health

--- a/deploy/kubernetes/chart/files/fileServer/datasets.conf
+++ b/deploy/kubernetes/chart/files/fileServer/datasets.conf
@@ -14,8 +14,11 @@ server {
         return 404;
     }
 
-    # Health check
-    location /thredds/fileServer/healthcheck {
+    # Health checks
+    location /health {
+        return 200;
+    }
+    location /thredds/fileServer/health {
         return 200;
     }
 
