Updated staticfiles config

--- a/deploy/kubernetes/chart/files/fileServer/datasets.conf
+++ b/deploy/kubernetes/chart/files/fileServer/datasets.conf
@@ -4,14 +4,10 @@ server {
     listen       8080 default_server;
     server_name  _;
 
-    # By default, return 404
+    # Look for static files to serve
     location / {
-        return 404;
-    }
-
-    # Disallow access to all dot-files
-    location ~ /\. {
-        return 404;
+        root /var/www/html;
+        autoindex off;
     }
 
     # Health checks
