--- a/deploy/kubernetes/chart/templates/fileServer/staticcontent.yaml
+++ b/deploy/kubernetes/chart/templates/fileServer/staticcontent.yaml
@@ -6,7 +6,7 @@ metadata:
   name: {{ include "esgf.component.fullname" (list . "staticContent") }}
   labels: {{ include "esgf.component.labels" (list . "staticContent" $fileServer.labels) | nindent 4 }}
 data:
-{{- if $fileServer.robotsTxtEnabled -}}
-  robots.txt: {{ tpl (.Files.Get "files/fileServer/robots.txt") . | quote }}
-{{- end -}}
+{{ if $fileServer.robotsTxtEnabled }}
+  robots.txt: {{ (tpl (.Files.Get "files/fileServer/robots.txt") . | quote ) }}
+{{ end }}
 {{- end -}}
