Added an option to configure the class used for ingress

--- a/deploy/kubernetes/chart/templates/ingress/ingress-auth.yaml
+++ b/deploy/kubernetes/chart/templates/ingress/ingress-auth.yaml
@@ -9,6 +9,9 @@ metadata:
   {{- end }}
 spec:
   {{ include "esgf.ingress.tls" . | indent 2 }}
+  {{- if .Values.ingress.className }}
+  ingressClassName: {{ .Values.ingress.className }}
+  {{- end }}
   rules:
     - host: {{ .Values.hostname | quote }}
       http:
