Adding latest logstash config for Kubernetes

--- a/deploy/kubernetes/chart/files/logstash/10-stats.conf
+++ b/deploy/kubernetes/chart/files/logstash/10-stats.conf
@@ -59,14 +59,26 @@ filter {
         add_field => { "country_code" => "%{[geoip][country_code2]}" }
         # Remove any unrequired fields
         remove_field => ["client_ip", "command", "geoip", "tags", "user"]
+        # For Rabbit queue compatibility
+        add_field => {
+            "rabbitmq_payload" => '{ "properties": { "delivery_mode": 2 }, "routing_key": "log_queue", "payload": "%{message}", "payload_encoding": "string" }'
+        }
     }
 }
 output {
-    lumberjack {
-        codec => json
-        hosts => ["{{ $statsPipeline.server }}"]
-        port => {{ $statsPipeline.port }}
-        ssl_certificate => "/etc/logstash/certs/lumberjack.cert"
+    http {
+        url => "{{ $statsPipeline.url }}"
+        http_method => "post"
+        headers => {
+            "Authorization" => "Basic {{ $statsPipeline.authorizationKey }}"
+            "Content-Type" => "application/json"
+        }
+        
+        format => "message" 
+        
+        message => "%{rabbitmq_payload}"
+        
+        http_compression => false
     }
 }
 {{- end }}
