Correcting log string for stats

--- a/deploy/kubernetes/chart/files/logstash/10-stats.conf
+++ b/deploy/kubernetes/chart/files/logstash/10-stats.conf
@@ -59,7 +59,7 @@ filter {
         add_field => { "country_code" => "%{[geoip][country_code2]}" }
         # Construct a new message string
         add_field => {
-            "rabbitmq_message" => '%{country_code} - - [%{request_time}] "%{method} %{request} HTTP/%{http_version}" %{status_code} %{bytes_sent} "%{referrer}" "%{user_agent}" "%{client_ip}" [%{request_duration}]'
+            "rabbitmq_message" => '%{host} %{country_code} %{request_time} %{method} %{request} HTTP/%{http_version} %{status_code} %{bytes_sent} %{request_duration} %{user_agent}'
         }
     }
     mutate {
@@ -68,7 +68,7 @@ filter {
             "rabbitmq_payload" => '{ "properties": { "delivery_mode": 2 }, "routing_key": "log_queue", "payload": "%{rabbitmq_message}", "payload_encoding": "string" }'
         }
         # Remove any unrequired fields
-        remove_field => ["rabbitmq_message", "command", "geoip", "tags", "user", "country_code", "request_time", "method", "request", "http_version", "status_code", "bytes_sent", "referrer", "user_agent", "client_ip", "request_duration"]
+        remove_field => ["rabbitmq_message", "command", "geoip", "tags", "user", "host", "country_code", "request_time", "method", "request", "http_version", "status_code", "bytes_sent", "referrer", "user_agent", "client_ip", "request_duration"]
     }
 }
 output {
