--- a/deploy/kubernetes/chart/files/logstash/10-stats.conf
+++ b/deploy/kubernetes/chart/files/logstash/10-stats.conf
@@ -59,7 +59,7 @@ filter {
         add_field => { "country_code" => "%{[geoip][country_code2]}" }
         # Construct a new message string
         add_field => {
-            "rabbitmq_message" => '%{host} %{country_code} %{request_time} %{method} %{request} HTTP/%{http_version} %{status_code} %{bytes_sent} %{request_duration} %{user_agent}'
+            "rabbitmq_message" => '%{host} %{country_code} %{request_time} %{method} %{request} HTTP/%{http_version} %{status_code} %{bytes_sent} %{request_duration} \"%{user_agent}\"'
         }
     }
     mutate {
