--- a/deploy/ansible/roles/data/tasks/logstash_install.yml
+++ b/deploy/ansible/roles/data/tasks/logstash_install.yml
@@ -12,18 +12,10 @@
   docker_network:
     name: esgf
 
-- name: Ensure logstash config directories exist
+- name: Ensure logstash config directory exist
   file:
-    path: /esg/config/logstash/{{ item }}
+    path: /esg/config/logstash/pipelines
     state: directory
-  loop:
-    - certs
-    - pipelines
-
-- name: Install certificate for stats server
-  copy:
-    content: "{{ logstash_stats_certificate }}"
-    dest: /esg/config/logstash/certs/lumberjack.cert
 
 - name: Install stats logstash configuration
   template:
@@ -44,8 +36,6 @@
     user: "{{ data_security_context_user }}"
     groups: "{{ data_security_context_groups }}"
     volumes:
-      # Logstash certificates
-      - "/esg/config/logstash/certs:/etc/logstash/certs:ro"
       # Logstash configuration
       - "/esg/config/logstash/pipelines:/etc/logstash/conf.d:ro"
       # Log directory
